[package]
name = "rxn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
debug = false
opt-level = 3
overflow-checks = false

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "memoryapi", "processthreadsapi", "winnt", "windef", "impl-default", "minwindef", "tlhelp32", "psapi"] }